--- a/src/Busybee/StudentBundle/Resources/translations/BusybeeStudentBundle.en_GB.yml
+++ b/src/Busybee/StudentBundle/Resources/translations/BusybeeStudentBundle.en_GB.yml
@@ -90,18 +90,18 @@ activity:
             possibleList: 'Merge Selected Students'
         label:
             list: 'Select Student/s'
-            possibleList: Match Student List
         help:
             list: 'Students must be placed in the grades selected to appear in this list of available students.'
-            possibleList: 'Selecting and clicking the list will select the students in the selected list and apply them to this activity. The lists available are restricted to the same year.'
-        placeholder:
-            possibleList: 'Select Student Activity'
     students:
         title: 'Students in Activity. (%name% of %total% selected)'
     space:
         placeholder: 'Select a Space (Capacity)'
         label: Activity Space
         help: ''
+    studentReference:
+        placeholder: 'Select existing Activity'
+        label: Reference Students from Existing Activity
+        help: 'Select an activity to link that activity to this activity for student reference. The lists available are restricted to the same year. Changes in the reference activity student list are added to this activities students automatically.'
 activities:
     title: Activities List
 grades:
