Period Report - Test all students are assigned in a grade in a period.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -204,6 +204,13 @@ period:
         remove: Remove Activity
     full:
         report: Generate Full Period Report
+    report:
+        full:
+            header: '%day% - %period%'
+    grade:
+        missingStudents:
+            none: All students found.
+            missing: "%count% students missing."
 column:
     remove:
         locked: 'The column has been locked and cannot be removed.'
