--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -193,10 +193,11 @@ period:
             add: Add Activity Group
             remove: Remove Activity Group
         header: 'Period %day% - %period%'
-        panelparagraph: '%start% - %end%'
+        panelparagraph: '%start% - %end%.  You can add a line of activities to this period by selecting a line from the select list above.  Any duplicates are ignored.'
+        reportparagraph: '%start% - %end%'
         banner:
-            title: Period Plan
-            description: "doin' the stuff"
+            title: Period Activity Management
+            description: "Assign activities to the period."
         activity:
             title: '%name%'
     activity:
@@ -207,6 +208,7 @@ period:
     report:
         full:
             header: '%day% - %period%'
+            button: 'Generate Period Report'
     grade:
         missingStudents:
             none: All students found.
