Duplicate Period Activities
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -122,7 +122,7 @@ menu:
     timetable:
         manage: Manage Timetables
         title: Timetables
-        activitygroups: Activity Groups
+        line: Activity Lines
         assigndays: Assign Days
 ajax:
     wait_message: saving data.. please wait.. 
