End of Day 13th June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -196,6 +196,7 @@ period:
             remove:
                 success: 'The activity %name% was removed.'
                 error: 'Error: %error%'
+                button: Remove Activity from Period.
         line:
             added: Activities where successfully added to the period.
             none: No activities were added to the period.
