Work on limiting testing on Grades in the timetable.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -298,7 +298,11 @@ grade:
         title: Remove Grade from Year
     add:
         title: Add Grade to Year
-
+    control:
+        title: Grade Control
+        description: 'Limit the testing of grades in the timetable.'
+        label: 'Monitor %grade%'
+        toggle: 'Toggle monitor grade.'
 student:
     grade:
         label:
