Display Timetable with Control (Only Grades done.)
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -256,3 +256,6 @@ column:
         missing: 'The timetable containing the columns was not found.'
 time: Time
 weekShort: W
+break: ''
+School Closed: School Closed
+today: Today
