Preferences Page Start
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -127,6 +127,13 @@ person:
         student: Student
     reset:
         button: Reset Form
+    preference:
+        title: 'Preferences: %name%'
+        description: ''
+        header: Preferences
+        language:
+            label: Personal Language
+            placeholder: Default to System Language
 student:
     title:
         list: Student List
